--- a/style.css
+++ b/style.css
@@ -6,15 +6,18 @@ html {
 
 .container {
   height: 100vh;
+  width: 800px;
+  margin: auto;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 .canvas {
   background-color: antiquewhite;
-  height: 800px;
-  width: 800px;
+  width: 100%;
+  aspect-ratio: 1;
   display: flex;
   flex-direction: column;
 }
@@ -30,4 +33,22 @@ html {
 
 .canvas__pixel--black {
   background-color: black;
+}
+
+.control-container {
+  margin-top: 50px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.button {
+  color: antiquewhite;
+  background-color: coral;
+  border: 4px solid antiquewhite;
+  border-radius: 10px;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 10px 20px;
 }
