--- a/style.css
+++ b/style.css
@@ -51,16 +51,40 @@ html {
   margin-top: 50px;
   width: 100%;
   display: flex;
-  justify-content: space-between;
-  gap: 30px;
+  gap: 5px;
 }
 
 .button {
   color: antiquewhite;
   background-color: coral;
-  border: 4px solid antiquewhite;
-  border-radius: 10px;
-  font-size: 30px;
+  border: 3px solid antiquewhite;
+  border-radius: 4px;
   font-weight: bold;
-  padding: 10px 20px;
+  padding: 5px;
+}
+
+.button--selected {
+  background-color: goldenrod;
+}
+
+.button__preview {
+  margin: 0;
+  height: 30px;
+  aspect-ratio: 1;
+}
+
+.button__preview--black {
+  background-color: black;
+}
+
+.button__preview--red {
+  background-color: red;
+}
+
+.button__preview--blue {
+  background-color: blue;
+}
+
+.button__preview--green {
+  background-color: green;
 }
