--- a/style.css
+++ b/style.css
@@ -47,20 +47,51 @@ html {
   background-color: green;
 }
 
+.canvas__pixel--yellow {
+  background-color: yellow;
+}
+
+.canvas__pixel--orange {
+  background-color: orangered;
+}
+
+.canvas__pixel--purple {
+  background-color: purple;
+}
+
+.canvas__pixel--cyan {
+  background-color: cyan;
+}
+
+.canvas__pixel--magenta {
+  background-color: magenta;
+}
+
+.canvas__pixel--brown {
+  background-color: saddlebrown;
+}
+
 .control-container {
   margin-top: 50px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 5px;
+}
+
+.control-container__subcontainer {
+  flex-direction: row;
+  margin-top: 0px;
 }
 
 .button {
   color: antiquewhite;
   background-color: coral;
-  border: 3px solid antiquewhite;
-  border-radius: 4px;
+  border: 4px solid antiquewhite;
+  border-radius: 12px;
+  font-size: 30px;
   font-weight: bold;
-  padding: 5px;
+  padding: 8px;
 }
 
 .button--selected {
@@ -69,8 +100,9 @@ html {
 
 .button__preview {
   margin: 0;
-  height: 30px;
+  height: 50px;
   aspect-ratio: 1;
+  border-radius: 4px;
 }
 
 .button__preview--black {
@@ -87,4 +119,28 @@ html {
 
 .button__preview--green {
   background-color: green;
+}
+
+.button__preview--yellow {
+  background-color: yellow;
+}
+
+.button__preview--orange {
+  background-color: orangered;
+}
+
+.button__preview--purple {
+  background-color: purple;
+}
+
+.button__preview--cyan {
+  background-color: cyan;
+}
+
+.button__preview--magenta {
+  background-color: magenta;
+}
+
+.button__preview--brown {
+  background-color: saddlebrown;
 }
