--- a/style.css
+++ b/style.css
@@ -145,6 +145,22 @@ html {
   background-color: saddlebrown;
 }
 
+.button__preview--rainbow {
+  background: linear-gradient(
+        135deg,
+        rgba(255, 0, 0, 1) 10%,
+        rgba(255, 154, 0, 1) 20%,
+        rgba(208, 222, 33, 1) 30%,
+        rgba(79, 220, 74, 1) 40%,
+        rgba(63, 218, 216, 1) 50%,
+        rgba(47, 201, 226, 1) 60%,
+        rgba(28, 127, 238, 1) 70%,
+        rgba(95, 21, 242, 1) 80%,
+        rgba(186, 12, 248, 1) 90%,
+        rgba(251, 7, 217, 1) 100%
+    );
+}
+
 .control-container__slider {
   margin: 0 20px;
   width: 175px;
