--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@ html {
 }
 
 .container {
-  height: 100vh;
-  width: 800px;
+  height: 95vh;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -16,7 +15,7 @@ html {
 
 .canvas {
   background-color: antiquewhite;
-  width: 100%;
+  width: 800px;
   aspect-ratio: 1;
   display: flex;
   flex-direction: column;
@@ -85,6 +84,7 @@ html {
   display: flex;
   flex-direction: column;
   gap: 5px;
+  justify-content: center;
 }
 
 .control-container__subcontainer {
@@ -108,6 +108,7 @@ html {
 
 .button--big {
   width: 133px;
+  flex-shrink: 0;
 }
 
 .button__preview {
@@ -190,10 +191,19 @@ html {
 }
 
 .control-container__slider {
-  margin: 0 20px;
-  width: 175px;
+  box-sizing: border-box;
+  margin: 0;
+  padding-left: 10px;
+  width: 409px;
   text-align: center;
   color: antiquewhite;
   font-weight: 500;
   font-size: 22px;
+}
+
+.footer {
+  font-size: 22px;
+  font-weight: 500;
+  color: antiquewhite;
+  text-align: center;
 }
